# firebase-ios-sdk

./: .clang-format  .editorconfig  .gitignore  .integ-Mc.Connect  .ruby-version  .spi.yml  .swiftformat  .travis.yml  AGENTS_ARCHITECTURE.yaml  AUTHORS  AddNewPod.md  AppCheck.podspec  AppCheckCore.podspec  AppCheckCoreInterop.podspec  AppCheckInterop.podspec  AppDistributionApiService.swift  AppleSilicon.md  Build Your Sales Funnel.mind  ByteBufferShim.swift  CMAKE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Calendar.numbers  Carthage.md  Cct.pbobjc.h  Cct.pbobjc.m  Credentials.swift  Dangerfile  Dangerfile.swift  DocumentReference+Codable.swift  Empty.swift  ExchangeTokenRequestTests.swift  ExchangeTokensRequestTests.swift  FIRAllocatedUnfairLock.swift  FIRAuthWebUtilsTests.m  FIRDynamicLinkTest.m  FIRInAppMessageDisplayStoryboardTV.storyboard  Firebase.podspec  FirebaseABTesting.podspec  (+142 more)
FirebaseCore/: CHANGELOG.md  CMakeLists.txt
FirebaseCore/Core/: FIRAnalyticsConfiguration.h  FIRAnalyticsConfiguration.m  FIRApp.h  FIRApp.m  FIRAppAssociationRegistration.m  FIRConfiguration.h  FIRErrors.m  FIRLoggerLevel.h  FIROptions.h  FIROptions.m  FIRSwiftNameSupport.h
FirebaseCore/Core/Private/: FIRAppInternal.h  FIRErrorCode.h  FIRErrors.h  FIRLogger.h  FIROptionsInternal.h
FirebaseCore/Extension/: FIRAppInternal.h  FIRBundleUtil.h  FIRComponent.h  FIRComponentContainer.h  FIRComponentType.h  FIRHeartbeatLogger.h  FIRLibrary.h  FIRLogger.h  FIROptionsInternal.h  FirebaseCoreInternal.h  UIApplication+FIRSceneDelegateFinder.h  dummy.m
FirebaseCore/Internal/: FIRAppInternal.h  FIRComponentContainer.h  FIRCoreDiagnosticsConnector.h  FIRHeartbeatInfo.h  FIRHeartbeatLogger.h  FIRLibrary.h  FirebaseCoreInternal.h
FirebaseCore/Internal/Sources/: FIRAllocatedUnfairLock.swift
FirebaseCore/InternalObjC/: FIRComponent.m  FIRComponentContainer.m  FIRComponentContainerInternal.h  FIRComponentType.m  FIRLogger.h  FIRLogger.m  FirebaseCoreInternal.h
FirebaseCore/Sources/: BundleUtil.swift  FIRAnalyticsConfiguration.h  FIRAnalyticsConfiguration.m  FIRApp.m  FIRAppAssociationRegistration.h  FIRAppAssociationRegistration.m  FIRBundleUtil.h  FIRBundleUtil.m  FIRComponent.m  FIRComponentContainer.m  FIRComponentContainerInternal.h  FIRComponentType.m  FIRConfiguration.m  FIRConfigurationInternal.h  FIRCoreDiagnosticsConnector.m  FIRDependency.m  FIRDiagnosticsData.h  FIRDiagnosticsData.m  FIREmulatorSettings.m  FIRErrors.m  FIRFirebaseUserAgent.h  FIRFirebaseUserAgent.m  FIRHeartbeatInfo.m  FIRHeartbeatLogger.m  FIRLogger.m  FIROptions.m  FIROptionsInternal.h  FIRTimestamp.m  FIRTimestampInternal.h  FIRVersion.h  FIRVersion.m  UIApplication+FIRSceneDelegateFinder.m
FirebaseCore/Sources/Private/: FIRAppInternal.h  FIRComponent.h  FIRComponentContainer.h  FIRComponentContainerInternal.h  FIRComponentType.h  FIRCoreDiagnosticsConnector.h  FIRDependency.h  FIRDiagnosticsData.h  FIRErrorCode.h  FIRErrors.h  FIRHeartbeatInfo.h  FIRHeartbeatLogger.h  FIRLibrary.h  FIRLogger.h  FIROptionsInternal.h  FIRVersion.h  FirebaseCoreInternal.h
FirebaseCore/Sources/Public/: FIRApp.h  FIRConfiguration.h  FIREmulatorSettings.h  FIRLoggerLevel.h  FIRTestFile.h
FirebaseCore/Sources/Resources/: PrivacyInfo.xcprivacy
FirebaseCore/Sources/Utilities/: BundleUtil.swift
FirebaseCore/Tests/SwiftUnit/: BundleUtilTests.swift  CoreAPITests.swift  FirebaseAppTests.swift  FirebaseConfigurationTests.swift  FirebaseCore-unit-Bridging-Header.h  FirebaseOptionsTests.swift
FirebaseCore/Tests/Unit/: Dummy.swift  FIRAnalyticsConfigurationTest.m  FIRAppAssociationRegistrationUnitTests.m  FIRAppTest.m  FIRBundleUtilTest.m  FIRComponentContainerTest.m  FIRComponentTypeTest.m  FIRConfigurationTest.m  FIRDiagnosticsDataTest.m  FIRFirebaseUserAgentTests.m  FIRHeartbeatInfoTest.m  FIRHeartbeatLoggerTest.m  FIRHeartbeatLoggerTests.m  FIRLoggerTest.m  FIROptionsEqualityTest.m  FIROptionsTest.m  FIRTestCase.h  FIRTestCase.m  FIRTestComponents.h  FIRTestComponents.m  FIRTimestampTest.m  UIApplication+FIRSceneDelegateFinderTests.m
Firestore/: CHANGELOG.md  CMakeLists.txt  Firestore.podspec  Foo.txt  LICENSE  README.md  denver.cc  firestore_collection_group_index_config.tf  firestore_composite_index_config.tf  firestore_index_config.tf  main.tf  test.sh
Firestore/CxxInterop/: Package.swift
Firestore/Example/: CMakeLists.txt  GoogleBenchmark.podspec  GoogleService-Info.plist  GoogleTest.podspec  LibFuzzer.podspec  NLOHMANN_JSON_LICENSE.MIT  Podfile  ProtobufCpp.podspec  gRPC-C++.podspec  gRPC-Core.podspec  gRPC-ProtoRPC.podspec  gRPC-RxLibrary.podspec  gRPC.podspec  nlohmann_json.podspec
Firestore/Example/App/: CMakeLists.txt  GoogleService-Info.plist
Firestore/Example/Benchmarks/: CMakeLists.txt  FSTBenchmarkTests.mm  FSTLevelDBBenchmarkTests.mm  remote_document_cache_benchmark.mm  string_apple_benchmark.mm
Firestore/Example/Firestore/: FIRAppDelegate.m  FIRViewController.m  main.m
Firestore/Example/Firestore.xcodeproj/: project.pbxproj
Firestore/Example/Firestore_Benchmarks_iOS/: FSTLevelDBBenchmarkTests.mm  Firestore_Benchmarks_iOS.m
Firestore/Example/Firestore_Example_macOS/: AppDelegate.m
Firestore/Example/Firestore_Example_watchOS WatchKit Extension/: ComplicationController.swift  ContentView.swift  FirestoreApp.swift  Info.plist  NotificationController.swift  NotificationView.swift
Firestore/Example/FuzzTests/: FIRFuzzTestsPrincipal.mm  (+2 more)
Firestore/Port/: bits.cc  bits.h  bits_test.cc  ordered_code.cc  ordered_code.h  ordered_code_test.cc  string_util.cc  string_util.h  string_util_test.cc
Firestore/Protos/: CMakeLists.txt  Podfile  README.md  build-protos.sh  build_protos.py  nanopb_cpp_generator.py  nanopb_pretty_printing.py  strip-registry.py
Firestore/Source/: CMakeLists.txt
Firestore/Swift/: CHANGELOG.md  FirebaseFirestore.h  README.md
Firestore/core/: .clang-format  .clang-tidy  CMakeLists.txt  NoDestructorProgress.txt
Firestore/cpp/: .clang-tidy  CMakeLists.txt
Firestore/fuzzing/: CMakeLists.txt  fieldpath_fuzzer.cc  leveldb_fuzzer.cc  resourcepath_fuzzer.cc  serializer_fuzzer.cc
(+13844 files in other folders)
